# ouch

./: CMakeLists.txt  README.md
assignment1/: CMakeLists.txt  main.cpp  ouch_accepted_message.cpp  ouch_accepted_message.h  ouch_canceled_message.cpp  ouch_canceled_message.h  ouch_header.cpp  ouch_header.h  ouch_replaced_message.cpp  ouch_replaced_message.h  ouch_summarize.cpp  ouch_summarize.h  ouch_system_message.cpp  ouch_system_message.h  ouch_text_sizes.cpp  ouch_text_sizes.h  s
